[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{name = "Pieter Geerts"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Home Automation",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = ["aiohttp>=3.9.0"]
description = "Async Python client for the Renson WAVES local HTTP API"
keywords = ["renson", "waves", "ventilation", "api", "async", "aiohttp", "home-automation"]
license = {text = "MIT"}
name = "renson-waves-client"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "aioresponses>=0.7.6",
  "mypy>=1.10",
  "ruff>=0.4",
]

[project.urls]
Changelog = "https://github.com/Pietergeerts/renson-waves-python/blob/main/CHANGELOG.md"
Homepage = "https://github.com/Pietergeerts/renson-waves-python"
Issues = "https://github.com/Pietergeerts/renson-waves-python/issues"
Source = "https://github.com/Pietergeerts/renson-waves-python"

# ---------------------------------------------------------------------------
# Build
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/renson_waves_client"]

# ---------------------------------------------------------------------------
# Linting – Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
ignore = [
  "E501", # line too long — handled by formatter
  "N818", # CannotConnect is intentional public API name (not *Error suffix)
]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "TID"]

[tool.ruff.lint.isort]
known-first-party = ["renson_waves_client"]

# ---------------------------------------------------------------------------
# Type checking – mypy
# ---------------------------------------------------------------------------

[tool.mypy]
files = ["src"]
python_version = "3.12"
strict = true

# ---------------------------------------------------------------------------
# Testing – pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
addopts = "-v --cov=renson_waves_client --cov-report=term-missing"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]
source = ["src/renson_waves_client"]

[tool.coverage.report]
fail_under = 90
show_missing = true
